@@ -16,6 +16,7 @@ Bug fixes:
 
 Standard library:
 - PR#4986: add List.sort_uniq and Set.of_list
+- PR#6148: speed improvement for Buffer (patch by John Whitington)
 
 Features wishes:
 - PR#4243: make the Makefiles parallelizable
